--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="image/png" sizes="16x16" rel="icon" href="img/favicon.png">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <title>programmingTools</title>
 </head>
 
@@ -20,11 +19,11 @@
         <div class="title">
             <h1>programmingTools</h1>
         </div>
-        <section>
+        <section class="card">
             <h2>Do you want to become a better developer?</h2>
-            <div class="close_tag">
-                <p>
-                    < / >
+            <div class="container_close_tag">
+                <p class="close_tag">
+                    &lt;&#47;&gt;
                 </p>
             </div>
             <button id="btn_si">Yes</button>
@@ -32,7 +31,9 @@
         </section>
     </main>
     <footer>
-        <div id="copyright">Copyright&copy; 2022 - Web made by Codexz- All rights reserved</div>
+        <div id="copyright">
+            <p>Copyright&copy; 2022 - Web made by Codexz- All rights reserved</p>
+        </div>
     </footer>
     <script src="main.js"></script>
 
